# SpeciesExplorer

./: .bandit.yml  .cspell.json  .exrc  .flake8  .gitignore  .nvim.lua  .pre-commit-config.yaml  .travis.yml  .yamllint  404.html  LICENSE  Makefile  PACKAGES.md  README.html  README.md  README.txt  SPECIFICATION.md  __init__.py  admin.py  file_downloader.py  flake.nix  gbifutils.py  index.html  metadata.txt  mkdocs.yml  pb_tool.cfg  pylintrc  pyproject.toml  resources.py  resources.qrc  sitemap.xml  species_explorer.py  species_explorer_dialog.py  species_explorer_dialog_base.ui  test_suite.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
about/credits/: index.html
about/license/: index.html
admin/: index.html
developer/: index.html
developer/api/: index.html
developer/architecture/: index.html
developer/contributing/: index.html
developer/setup/: index.html
docs/: index.md
docs/about/: credits.md  license.md
docs/admin/: index.md
docs/developer/: api.md  architecture.md  contributing.md  index.md  setup.md
docs/stylesheets/: extra.css
docs/user-guide/: faq.md  index.md  installation.md  quickstart.md  usage.md
help/: Makefile  make.bat
help/source/: conf.py  index.rst
occurrences/: __init__.py
registry/: __init__.py
scripts/: checks.sh  clean.sh  encoding_check.sh  release.sh  start_qgis.sh  start_qgis_ltr.sh  start_qgis_master.sh  windows-install-builder.nsi
search/: search_index.json
species/: __init__.py  name_lookup.py  name_parser.py  name_usage.py
species_explorer/: __init__.py  cluster_style.qml  gbif_downloader_dialog.py  gbif_downloader_dialog_base.ui  gbif_fetcher.py  gbifutils.py  icon.afdesign  metadata.txt  om-icon.afdesign  openmodeller_dialog.py  openmodeller_dialog_base.ui  options_base.ui  options_dialog.py  options_dialog_base.ui  plugin.py  request.txt  resources.py  resources.qrc  species_explorer.py  species_explorer_dialog.py  species_explorer_dialog_base.ui  utilities.py
species_explorer/gui/: __init__.py  kartoza_branding.py
species_explorer/resources/styles/: kartoza.qss
test/: furcata_bolivana.geojson  protea_repens.geojson  qgis_interface.py  rain_coolest.tif  temp_avg.tif  test_gbif.py  test_init.py  test_openmodeller_dialog.py  test_qgis_environment.py  test_resources.py  test_species_explorer_dialog.py  test_translations.py  utilities.py
user-guide/: index.html
user-guide/faq/: index.html
user-guide/installation/: index.html
user-guide/quickstart/: index.html
user-guide/usage/: index.html
